# lazymail

./: .gitignore  Config.hs  Email.hs  Handlers.hs  Lazymail.hs  Maildir.hs  Main.hs  Print.hs  README.md  Rfc1342.hs  Screen.hs  State.hs  Types.hs  lazymail.cabal
Codec/Text/: Rfc1342.hs
Lazymail/: Handlers.hs
src/: Main.hs
src/Lazymail/: Config.hs  Email.hs  Handlers.hs  Keymap.hs  Maildir.hs  Print.hs  Screen.hs  State.hs  Types.hs  Utils.hs
